--- a/app/components/d3/timetable-chart.hbs
+++ b/app/components/d3/timetable-chart.hbs
@@ -4,5 +4,6 @@
   width="100%" height="100%"
   viewBox="0 0 {{this.width}} {{this.height}}"
   {{did-insert this.initialRender}}
+  {{did-update this.update @data}}
 >
 </svg>
