--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
 <div class="container">
   <h3>
     Timetable length
-    {{@model.length}}
+    {{this.data.length}}
   </h3>
   <div class="row">
     <div class="col-12">
@@ -14,6 +14,9 @@
         @model={{this}}
         @onSubmit={{this.parseTimetable}} as |form|
       >
+        <button class="btn btn-primary" {{on 'click' this.deleteTimetable}}>
+          Delete timetable
+        </button>
         <form.element
           @controlType="textarea"
           @label="Textarea"
