--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,9 +13,9 @@
         <button
           type="button"
           class="btn btn-outline-primary"
-          {{on 'click' this.deleteTimetable}}
+          {{on 'click' this.costsOptArray}}
         >
-          Delete timetable models
+          Calculate MiniMax rearrangement
         </button>
         <button
           type="button"
